--- a/src/main/resources/templates/hall/list.html
+++ b/src/main/resources/templates/hall/list.html
@@ -67,13 +67,37 @@
         <div id="detail" style="display: none;">
             <form class="layui-form layui-form-pane">
                 <div class="layui-form-item">
-                    <label class="layui-form-label">id</label>
+                    <label class="layui-form-label">展商名称</label>
                     <div class="layui-input-block">
                         <input type="text" class="layui-input" readonly>
                     </div>
                 </div>
                 <div class="layui-form-item">
-                    <label class="layui-form-label">名称</label>
+                    <label class="layui-form-label">展位号</label>
+                    <div class="layui-input-block">
+                        <input type="text" class="layui-input" readonly>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">vrHTML地址</label>
+                    <div class="layui-input-block">
+                        <input type="text" class="layui-input" readonly>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">浏览量</label>
+                    <div class="layui-input-block">
+                        <input type="text" class="layui-input" readonly>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">是否推荐</label>
+                    <div class="layui-input-block">
+                        <input type="text" class="layui-input" readonly>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">排序</label>
                     <div class="layui-input-block">
                         <input type="text" class="layui-input" readonly>
                     </div>
