--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -51,8 +51,7 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;">banner管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="400" menuurl='<iframe src="/immunity/list" width="100%" height="440px;" frameborder="0"></iframe>'>首页banner管理</a></dd>
-                        <dd><a href="javascript:;" menuid="55" menuurl='<iframe src="/diagnosis/list" width="100%" height="440px;" frameborder="0"></iframe>'>入口banner管理</a></dd>
+                        <dd><a href="javascript:;" menuid="400" menuurl='<iframe src="/platform/banner/list" width="100%" height="440px;" frameborder="0"></iframe>'>首页banner管理</a></dd>
                         <dd><a href="javascript:;" menuid="66" menuurl='<iframe src="/disinfect/list" width="100%" height="440px;" frameborder="0"></iframe>'>招展预告</a></dd>
                     </dl>
                 </li>
