--- a/src/main/resources/templates/role/input.html
+++ b/src/main/resources/templates/role/input.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="common::headr('添加或修改角色')"></head>
+    <head th:replace="common::headr('添加或修改')"></head>
 <body>
     <div class="layui-container">
         <div class="layui-row" style="margin-top: 10px;">
