--- a/src/main/resources/templates/banner/input.html
+++ b/src/main/resources/templates/banner/input.html
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                     <input th:field="*{id}" type="hidden"/>
-                    <input name="imgurl" type="hidden" id="imgurl"/>
+                    <input th:field="*{imgurl}" type="hidden" id="imgurl"/>
                     <button lay-submit lay-filter="submitFrom" style="display: none;">提交</button>
                 </form>
             </div>
