--- a/src/main/resources/templates/exhibitioninfo/input2.html
+++ b/src/main/resources/templates/exhibitioninfo/input2.html
@@ -65,6 +65,7 @@
                         </div>
                     </div>
                     <input th:field="*{id}" type="hidden"/>
+                    <input th:field="*{logo}" type="hidden"/>
                     <button lay-submit lay-filter="submitFrom" style="display: none;">提交</button>
                 </form>
             </div>
