--- a/src/main/resources/templates/aboutus/list.html
+++ b/src/main/resources/templates/aboutus/list.html
@@ -26,7 +26,7 @@
         util.event('lay-event', {
             communitynorms: function(){
                 alert('触发了事件1');
-                core.openIframeDialog('添加','/platform/about/input?type=add',['100%', '440px'],false,null);
+                core.openIframeDialog('设置','/platform/about/input?type=add',['100%', '440px'],false,null);
             }
             ,privacyclause: function(){
                 alert('触发了事件2');
