--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -52,16 +52,13 @@
                     <a href="javascript:;">banner管理</a>
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;" menuid="400" menuurl='<iframe src="/platform/banner/list" width="100%" height="440px;" frameborder="0"></iframe>'>首页banner管理</a></dd>
-                        <dd><a href="javascript:;" menuid="66" menuurl='<iframe src="/disinfect/list" width="100%" height="440px;" frameborder="0"></iframe>'>招展预告</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;">关于我们</a>
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;" menuid="500" menuurl='<iframe src="/platform/about/list" width="100%" height="440px;" frameborder="0"></iframe>'>关于</a></dd>
-                        <dd><a href="javascript:;" menuid="501" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>用户协议</a></dd>
-                        <dd><a href="javascript:;" menuid="1010" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>社区规范</a></dd>
-                        <dd><a href="javascript:;" menuid="1111" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>隐私条款</a></dd>
+                        <dd><a href="javascript:;" menuid="501" menuurl='<iframe src="/platform/aboutus/list" width="100%" height="440px;" frameborder="0"></iframe>'>规范设置</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
