--- a/src/main/resources/templates/exhibitioninfo/list2.html
+++ b/src/main/resources/templates/exhibitioninfo/list2.html
@@ -50,8 +50,10 @@
                                                 <div class="layui-input-block">
                                                     <select name="state" lay-filter="selectOrgFilter">
                                                         <option value="">请选择</option>
-                                                        <option value="0">未审核</option>
-                                                        <option value="1">已审核</option>
+                                                        <option value="0">未认证</option>
+                                                        <option value="1">审核通过</option>
+                                                        <option value="2">审核中</option>
+                                                        <option value="3">审核失败</option>
                                                     </select>
                                                 </div>
                                             </div>
