--- a/src/main/resources/templates/exhibitioninfo/input2.html
+++ b/src/main/resources/templates/exhibitioninfo/input2.html
@@ -61,13 +61,19 @@
                         </div>
                     </div>
                     <div class="layui-form-item">
-                        <label class="layui-form-label">是否审核</label>
+                        <label class="layui-form-label">审核操作</label>
                         <div class="layui-input-block">
                             <select name="state" required  lay-verify="required">
                                 <option value="">请选择</option>
-                                <option value="0" th:selected="${ehbExhibitor.state == 0}">审核不通过</option>
-                                <option value="1" th:selected="${ehbExhibitor.state == 1}">审核通过</option>
+                                <option value="3">审核不通过</option>
+                                <option value="1">审核通过</option>
                             </select>
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">审核失败原因（审核通过不填写）</label>
+                        <div class="layui-input-block">
+                            <input type="text" th:field="*{failreason}" required  autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <input th:field="*{id}" type="hidden"/>
