--- a/src/main/resources/static/HTML/css/style.css
+++ b/src/main/resources/static/HTML/css/style.css
@@ -140,3 +140,34 @@
 .g_answer-head span{display: block; margin-top: 0.1rem; font-size: 0.24rem; color: #666;}
 .g_answer-content{font-size: 0.28rem; color: #666; line-height: 0.48rem; padding: 0.3rem 0;}
 
+
+
+
+/*分享后打开*/
+.g_share-head{border-top: 1px solid #ebebeb; height: 0.97rem; padding: 0 0.3rem;}
+.g_share-head a{display: block; width: 1.3rem; height: 0.53rem; line-height: 0.53rem; text-align: center; font-size: 0.24rem; color: #fff; background: #43bdec; float: right; margin-top: 0.23rem;}
+.g_share-banner{width: 100%; height: 4.5rem; position: relative; overflow: hidden;}
+.g_share-banner ul{position: absolute; width: 100%; height: 100%; left: 0; top: 0;}
+.g_share-banner ul li{width: 100%; height: 4.5rem; float: left;}
+.g_share-banner ul li img{display: block; width: 100%; height: 4.5rem;}
+.g_sharebanner-kz{width: 100%; position: absolute; left: 0; bottom: 0.2rem; text-align: center; line-height: 0; z-index: 800;}
+.g_sharebanner-kz a{display: inline-block; width: 0.12rem; height: 0.12rem; border-radius: 0.12rem; background: #b8c0d3; margin: 0 0.1rem;}
+.g_sharebanner-kz a.g_sharebanner-dqys{background: #43bdec;}
+.g_share-article{padding: 0.44rem 0.3rem 0.26rem; border-bottom: 0.12rem solid #f7f7f7;}
+.g_article-head{padding-left: 1.63rem; height: 1.12rem; position: relative;}
+.g_article-head>img{display: block; width: 1.12rem; height: 1.12rem; border-radius: 1.12rem; position: absolute; left: 0; top: 0;}
+.g_article-div p{padding-top: 0.2rem; font-size: 0.28rem; color: #333;}
+.g_article-div p img{ width: 0.22rem; height: 0.25rem; margin-left: 0.11rem; position: relative; top: 0.04rem;}
+.g_article-div span{display: block; font-size: 0.24rem; color: #a6a6a6; margin-top: 0.1rem;}
+.g_share-content{margin-top: 0.4rem; font-size: 0.28rem; color: #666; line-height: 0.48rem; overflow: hidden;}
+.g_btn-zk{font-size: 0.28rem; color: #43bdec; padding-right: 0.2rem; background: url(../images/g_15.png) no-repeat right center; background-size: 0.12rem 0.27rem; display: inline-block;}
+.g_btn-sq{background: url(../images/g_16.png) no-repeat right center; background-size: 0.12rem 0.27rem;}
+.g_share-hsk{padding: 0 0.3rem;}
+.g_hsk-head{padding: 0.4rem 0; border-bottom: 1px solid #ebebeb; display: flex; justify-content: space-between; flex-wrap: wrap;}
+.g_hsk-head b{display: inline-block; height: 0.74rem; line-height: 0.74rem; font-size: 0.28rem; color: #000;}
+.g_hsk-head span{display: inline-block; height: 0.74rem; line-height: 0.74rem; border-radius: 0.74rem; padding: 0 0.3rem; background: #f0f0f0; font-size: 0.28rem; color: #000;}
+.g_hsk-body{display: none; font-size: 0.28rem; color: #666; padding-top: 0.3rem;}
+.g_hsk-body:nth-child(2){display: block;}
+.g_btn-sc{display: block; width: 4.15rem; height: 0.92rem; margin: 1rem auto;}
+.g_btn-sc img{display: block; width: 4.15rem; height: 0.92rem;}
+.g_hsk-body iframe{width: 100%; height: 2.3rem; display: block;}
